[project]
name = "github-trending"
version = "0.1.0"
description = ""
authors = [
    {name = "leodo9x",email = "leo.do.9x@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
]

[tool.poetry]
packages = [{include = "github_trending", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
